[gd_scene load_steps=7 format=3 uid="uid://b58a14q51g2px"]

[ext_resource type="Texture2D" uid="uid://8ltwlu7xqk1v" path="res://img/AugmentCard.png" id="1_80c2c"]
[ext_resource type="FontFile" uid="uid://dbeg36bsn4pry" path="res://fonts/Kenney Pixel.ttf" id="2_t572h"]
[ext_resource type="Script" path="res://scripts/ui/card.gd" id="2_x0kbu"]
[ext_resource type="Texture2D" uid="uid://ltpeietcofkw" path="res://img/Augments/BiggerReel.png" id="3_7qkrw"]
[ext_resource type="Resource" uid="uid://bqa5c04umdfnk" path="res://data/augments/reel_extand.tres" id="3_72o2w"]
[ext_resource type="PackedScene" uid="uid://cqyrvcvd17t6f" path="res://prefabs/ui/res_marker.tscn" id="4_8w8yw"]

[node name="Card" type="TextureRect"]
texture_filter = 1
scale = Vector2(2, 2)
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 2
texture = ExtResource("1_80c2c")
script = ExtResource("2_x0kbu")
augment_data = ExtResource("3_72o2w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 128.0
offset_bottom = 192.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 42)
offset_right = 128.0
offset_bottom = 42.0

[node name="CardTitle" type="Label" parent="VBoxContainer/CenterContainer"]
offset_left = 18.0
offset_top = 10.0
offset_right = 109.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0.152941, 0.211765, 0.207843, 1)
theme_override_fonts/font = ExtResource("2_t572h")
theme_override_font_sizes/font_size = 24
text = "Reel Extent"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
offset_top = 46.0
offset_right = 128.0
offset_bottom = 110.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/CenterContainer2"]
offset_left = 32.0
offset_right = 96.0
offset_bottom = 64.0
texture = ExtResource("3_7qkrw")

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer"]
offset_top = 114.0
offset_right = 128.0
offset_bottom = 154.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/CenterContainer3"]
custom_minimum_size = Vector2(100, 40)
offset_left = 14.0
offset_right = 114.0
offset_bottom = 40.0
theme_override_colors/default_color = Color(0.152941, 0.211765, 0.207843, 1)
theme_override_fonts/normal_font = ExtResource("2_t572h")
theme_override_fonts/bold_font = ExtResource("2_t572h")
bbcode_enabled = true
text = "[center]Extand the [color=#b95358]reel[/color] horizontally[/center]"
scroll_active = false

[node name="Ressources" type="CenterContainer" parent="VBoxContainer"]
offset_top = 158.0
offset_right = 128.0
offset_bottom = 179.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Ressources"]
offset_left = 51.0
offset_right = 77.0
offset_bottom = 21.0

[node name="ResMarker" parent="VBoxContainer/Ressources/HBoxContainer" instance=ExtResource("4_8w8yw")]
offset_right = 26.0
offset_bottom = 21.0

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
